--- a/parco_veicoli_circolante.ipynb
+++ b/parco_veicoli_circolante.ipynb
@@ -4,8 +4,10 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "include_colab_link": true
+      "collapsed_sections": [
+        "tj0tAI7HBtqn",
+        "VhYcagb9Qz5e"
+      ]
     },
     "kernelspec": {
       "name": "python3",
@@ -18,35 +20,11 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/morkioj/parco_veicoli/blob/main/parco_veicoli_circolante.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "source": [
         "# DATA COLLECTION"
       ],
       "metadata": {
         "id": "ljMTBuD5QFXb"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "**PASSAGGI PRELIMINARI**\n",
-        "\n",
-        "\n",
-        "*   Estrarre i files Circolante_Copert_AAAA.ods dagli archivi aci\n",
-        "\n",
-        "*   Caricarli sul proprio google drive nella cartella *Colab Notebooks/dataset/circolante*"
-      ],
-      "metadata": {
-        "id": "P0nFUpsUzXrS"
       }
     },
     {
@@ -98,6 +76,26 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Recupero i dataset dal progetto github"
+      ],
+      "metadata": {
+        "id": "z3SwE6CefGg-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git clone https://github.com/morkioj/parco_veicoli.git"
+      ],
+      "metadata": {
+        "id": "8JXQXP2eeMcG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "**Importazione files ods**\n",
         "* Per ogni file presente nella cartella estraggo il contenuto del foglio \"AV per regione\" e da questo genero un dataframe pandas\n",
         "* A questo df, aggiungo la colonna 'Anno' estrando il valore dal nome del file\n",
@@ -111,8 +109,9 @@
     {
       "cell_type": "code",
       "source": [
-        "drive.mount('/content/drive')\n",
-        "folder_path=\"/content/drive/MyDrive/Colab Notebooks/dataset/circolante\"\n",
+        "#drive.mount('/content/drive')\n",
+        "#folder_path=\"/content/drive/MyDrive/Colab Notebooks/dataset/circolante\"\n",
+        "folder_path=\"/content/parco_veicoli/circolante_copert\"\n",
         "file_path=\"\"\n",
         "sheet_name=\"AV_per_regione\"\n",
         "sheet_name2=\"AV per regione\"\n",
