add filename check

--- a/circolante_regione_alimentazione.ipynb
+++ b/circolante_regione_alimentazione.ipynb
@@ -21,46 +21,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "collapsed": true,
         "id": "9stKdRadV3Wi"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Collecting odfpyNote: you may need to restart the kernel to use updated packages.\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "WARNING: You are using pip version 22.0.4; however, version 24.2 is available.\n",
-            "You should consider upgrading via the 'C:\\Users\\Giovanni\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip' command.\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "  Downloading odfpy-1.4.1.tar.gz (717 kB)\n",
-            "     -------------------------------------- 717.0/717.0 KB 4.1 MB/s eta 0:00:00\n",
-            "  Preparing metadata (setup.py): started\n",
-            "  Preparing metadata (setup.py): finished with status 'done'\n",
-            "Collecting defusedxml\n",
-            "  Downloading defusedxml-0.7.1-py2.py3-none-any.whl (25 kB)\n",
-            "Using legacy 'setup.py install' for odfpy, since package 'wheel' is not installed.\n",
-            "Installing collected packages: defusedxml, odfpy\n",
-            "  Running setup.py install for odfpy: started\n",
-            "  Running setup.py install for odfpy: finished with status 'done'\n",
-            "Successfully installed defusedxml-0.7.1 odfpy-1.4.1\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "pip install odfpy"
       ]
@@ -100,26 +66,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "8JXQXP2eeMcG"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "^C\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "Cloning into 'parco_veicoli'...\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "!git clone https://github.com/morkioj/parco_veicoli.git"
       ]
@@ -149,6 +100,7 @@
         "#folder_path=\"/content/drive/MyDrive/Colab Notebooks/dataset/circolante\"\n",
         "folder_path=\"/content/parco_veicoli/dataset/parco_veicoli_circolante/\"\n",
         "file_path=\"\"\n",
+        "file_prefix=\"Circolante_Copert\"\n",
         "sheet_name=\"AV_per_regione\"\n",
         "sheet_name2=\"AV per regione\"\n",
         "df_list=[]\n",
@@ -157,25 +109,28 @@
         "\n",
         "for file_name in file_list:\n",
         "  file_path = os.path.join(folder_path,file_name)\n",
-        "  #Ottengo lo stream binario (rb: read binary) del contenuto del file per passarlo come parametro a pd.read\n",
-        "  with open(file_path, 'rb') as f:\n",
-        "    file_content = f.read()\n",
-        "  file_stream=BytesIO(file_content)\n",
-        "  # Per compatibilità con la recente versione di pandas, anzichè passargli il percorso, gli passo il file_stream\n",
-        "    # engine='odf' -> foglio di calcolo openoffice\n",
-        "    # header=1 -> salta la prima riga ed utilizza la seconda come intestazione colonne\n",
-        "  # Utilizzo il try-except perche alcuni file hanno il foglio con _ nel nome mentre altri hanno lo spazio\n",
-        "  try:\n",
-        "    df_file =pd.read_excel(io=file_stream,sheet_name=sheet_name,engine='odf',header=1)\n",
-        "  except ValueError:\n",
-        "    df_file =pd.read_excel(io=file_stream,sheet_name=sheet_name2,engine='odf',header=1)\n",
+        "  if(file_name.split('_20')[0]==file_prefix and os.path.splitext(file_name)[1] == \".ods\" ):\n",
+        "    #Ottengo lo stream binario (rb: read binary) del contenuto del file per passarlo come parametro a pd.read\n",
+        "    with open(file_path, 'rb') as f:\n",
+        "      file_content = f.read()\n",
+        "    file_stream=BytesIO(file_content)\n",
+        "    # Per compatibilità con la recente versione di pandas, anzichè passargli il percorso, gli passo il file_stream\n",
+        "      # engine='odf' -> foglio di calcolo openoffice\n",
+        "      # header=1 -> salta la prima riga ed utilizza la seconda come intestazione colonne\n",
+        "    # Utilizzo il try-except perche alcuni file hanno il foglio con _ nel nome mentre altri hanno lo spazio\n",
+        "    try:\n",
+        "      df_file =pd.read_excel(io=file_stream,sheet_name=sheet_name,engine='odf',header=1)\n",
+        "    except ValueError:\n",
+        "      df_file =pd.read_excel(io=file_stream,sheet_name=sheet_name2,engine='odf',header=1)\n",
         "\n",
-        "  #estraggo l'anno dal nome del file e lo inserisco in una nuova colonna\n",
-        "  df_file['ANNO'] = int(file_name.split('_')[-1].replace('.ods',''))\n",
+        "    #estraggo l'anno dal nome del file e lo inserisco in una nuova colonna\n",
+        "    df_file['ANNO'] = int(file_name.split('_')[-1].replace('.ods',''))\n",
         "\n",
-        "  #Inserisco in dataframe nella lista\n",
-        "  df_list.append(df_file)\n",
-        "  print(f\"{file_name} importato...\")\n",
+        "    #Inserisco in dataframe nella lista\n",
+        "    df_list.append(df_file)\n",
+        "    print(f\"{file_name} importato...\")\n",
+        "  else:\n",
+        "    print(f\"{file_name} non importato...\")\n",
         "\n",
         "#Una volta ottenuti tutti i dataframe (uno per ogni file) ed inseriti nella lista, li concateno tutti in una nuova lista\n",
         "df_orig = pd.concat(df_list, ignore_index=True)\n"
